Remove Stream Edition and Cloudflare Stream labels

--- a/tv_clustered_stream.html
+++ b/tv_clustered_stream.html
@@ -299,11 +299,9 @@
             </div>
             
             <div class="controls-info">
-                <div><strong>🎬 STREAM EDITION</strong></div>
-                <div style="margin-top: 10px;">↑↓ Change Channel</div>
+                <div>↑↓ Change Channel</div>
                 <div>← → Skip Video</div>
                 <div>R Random Channel</div>
-                <div style="color: #00ff00; margin-top: 5px; font-size: 0.8em;">☁️ Cloudflare Stream</div>
             </div>
         </div>
     </div>
