🗂️ Reorganize project structure: scripts, html_apps, archived folders
- Created organized directory structure:
  - /scripts/veo_generation/ - Video generation tools
  - /scripts/clustering/ - Semantic clustering scripts
  - /scripts/stream_upload/ - Cloudflare Stream upload
  - /scripts/utilities/ - Helper scripts
  - /html_apps/ - All TV web applications
  - /archived/ - Outdated/one-time scripts

- Updated .gitignore for new structure
- Updated index.html redirect to new location
- Created PROJECT_ORGANIZATION.md guide
- Updated README.md with current project status

All scripts and apps now logically organized by function.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta http-equiv="refresh" content="0; url=tv_clustered.html">
+    <meta http-equiv="refresh" content="0; url=html_apps/tv_clustered_stream.html">
 </head>
 <body>
     Redirecting to Interdimensional Cable TV...
