--- a/html_apps/tv_embedding_flow.html
+++ b/html_apps/tv_embedding_flow.html
@@ -525,6 +525,12 @@
                         continue;
                     }
                     
+                    // Skip videos that are too similar (less than 5% difference)
+                    if (similarity >= 0.95) {
+                        console.log(`Skipping too similar video (${(similarity * 100).toFixed(1)}%): ${this.videos[i].filename}`);
+                        continue;
+                    }
+                    
                     if (similarity > bestSimilarity) {
                         bestSimilarity = similarity;
                         bestIndex = i;
