Fix embedding flow path and configure wrangler for public folder only

--- a/public/embedding_flow.html
+++ b/public/embedding_flow.html
@@ -405,7 +405,7 @@
             async loadVideos() {
                 try {
                     this.showLoading();
-                    const response = await fetch('../video_embeddings_with_urls.json');
+                    const response = await fetch('/video_embeddings_with_urls.json');
                     const data = await response.json();
                     this.videos = data.videos;
                     
